<resources>
    <string name="app_name">Java Quiz</string>
    <string name="option_4">Option 4</string>
    <string name="option_3">Option 3</string>
    <string name="option_2">Option 2</string>
    <string name="option_1">Option 1</string>
    <string name="questions">Questions</string>
    <string name="number_of_questions">Number of Questions</string>
    <string name="quesAtt">\"Questiion Attempted : \"</string>
</resources>